<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registration">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="404dp"
            android:layout_height="342dp"
            android:layout_marginTop="140dp"
            android:transitionName="icon"
            android:alpha="0.4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:text="Don't have an account?"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="327dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/profile_icon"
            android:drawablePadding="20dp"
            android:drawableTint="@color/colorAccent"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/cardview_dark_background"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="327dp"
            android:layout_height="75dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="20dp"
            android:drawableTint="@color/colorAccent"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/cardview_dark_background"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="322dp"
            android:layout_height="40dp"
            android:layout_marginTop="56dp"
            android:background="@color/colorAccent"
            android:text="LOG IN"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="92dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="Sign up"
            android:textColor="@color/colorAccent"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.749"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="344dp"
            android:layout_height="197dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:transitionName="logo"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>