<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/home_nav"
    android:icon="@drawable/home_icon"
    android:title="Home"
    android:checkable="true"
    />

    <item
        android:id="@+id/friendsList"
        android:icon="@drawable/friend_icon"
        android:title="Friends"
        android:checkable="true"
        />
    <item
    android:id="@+id/profile_nav"
    android:icon="@drawable/profile_icon"
    android:title="Profile"
    android:checkable="true"
    />
    <item
        android:id="@+id/trip"
        android:icon="@drawable/travel"
        android:title="My Trip"
        android:checkable="true"
        />
<group>
    <item
        android:id="@+id/about"
        android:icon="@drawable/public_icon"
        android:title="About"
        android:checkable="true"
        />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting_icon"
        android:title="Setting"
        android:checkable="true"
        />
    <item
        android:id="@+id/logout_nav"
        android:icon="@drawable/friend_icon"
        android:title="Log out"
        android:checkable="true"
        />
</group>
</menu>