<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:titleTextColor="@color/colorAccent"
    android:background="@color/white"
    android:layout_alignParentTop="true"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Journey Mate"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:textSize="20dp"
        />
    <Button
        android:id="@+id/btn_search"
        android:layout_marginTop="3dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/search_icon"
        android:backgroundTint="@color/colorAccent"
        android:layout_toLeftOf="@id/btn_menu"
        />
<Button
    android:id="@+id/btn_menu"
    android:layout_marginTop="3dp"
    android:layout_marginRight="5dp"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:background="@drawable/menu_icon"
    android:layout_alignParentRight="true"
    />
</RelativeLayout>

</androidx.appcompat.widget.Toolbar>